--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "akashic-template",
-	"version": "0.1.1",
+	"name": "akashic-tile-ex",
+	"version": "0.1.0",
 	"description": "",
 	"scripts": {
 		"clean": "rimraf ./script",
@@ -39,5 +39,6 @@
 		"typescript": "^4.4.4",
 		"webpack": "^5.42.0",
 		"webpack-cli": "^4.7.2"
-	}
+	},
+	"dependencies": {}
 }
